# vidtoolz-fade

./: README.md  pyproject.toml
tests/: test_vidtoolz_fade.py
vidtoolz_fade/: __init__.py
