[project]
name = "vidtoolz-fade"
version = "0.0.1"
description = "Add fade in and out for a video using ffmpeg"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-fade"
Changelog = "https://github.com/sukhbinder/vidtoolz-fade/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-fade/issues"
CI = "https://github.com/sukhbinder/vidtoolz-fade/actions"

[project.entry-points."vidtoolz_plugins"]
fade = "vidtoolz_fade:fade_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
